Fixing the image in the hero to stop the stretch

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -68,7 +68,7 @@ p {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
-  background-size: cover;
+  object-fit: cover;
   background-position: center;
 }
 
